force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Generate__c.field-meta.xml
<CustomField>
    <fullName>Generate__c</fullName>
    <description>DCP-1060 - To Generate the Quote Document. Modified As part of DCP-1308.</description>
    <formula>IF(Generate_In_Progress__c,$Label.GenerateInProgressMessage,IF(
Invalid_Quote__c, &apos;&apos;,
IF($Profile.Name = $Label.ProfileCustomerService,null,
IF(
OR( TEXT(Apttus_Proposal__Approval_Stage__c)=&apos;Draft&apos;,
TEXT(Apttus_Proposal__Approval_Stage__c)=&apos;Approval Required&apos;,
TEXT(Apttus_Proposal__Approval_Stage__c)=&apos;In Review&apos;
),
HYPERLINK(&quot;/apex/Apttus_Proposal__ProposalGenerate?id=&quot;&amp;Id &amp; &quot;&amp;action=Preview&quot;,IMAGE(&quot;/resource/Button_Preview_Quote_Output&quot;,&quot;&quot;,20, 125),&quot;_self&quot;),
IF(
TEXT(Apttus_Proposal__Opportunity__r.StageName)=&apos;Create&apos;,$Label.GenerateProposalCreateStageMessage,
IF(
OR(
TEXT(Apttus_Proposal__Opportunity__r.StageName)=&apos;Closed Won&apos;,
TEXT(Apttus_Proposal__Opportunity__r.StageName)=&apos;Closed Lost&apos;,
TEXT(Apttus_Proposal__Opportunity__r.StageName)=&apos;Closed Abandoned&apos;
),$Label.GenerateProposalClosedStageMessage,
IF(
ISBLANK(Bill_To__c),$Label.GenerateProposalBillToMessage,
IF(
ISBLANK(Ship_To__c),$Label.GenerateProposalShipToMessage,
IF(
ISBLANK(Payer__c),$Label.GenerateProposalPayerMessage,
IF(
OR(
ISPICKVAL(Apttus_Proposal__Opportunity__r.Account.Account_Status__c,&apos;Unverified&apos;),
ISPICKVAL(Apttus_Proposal__Opportunity__r.Account.Account_Status__c,&apos;Pending Validation&apos;)
),$Label.GenerateProposalSoldToMessage,
IF(
OR(
ISPICKVAL(Apttus_Proposal__Opportunity__r.Ultimate_Consignee__r.Account_Status__c,&apos;Unverified&apos;),
ISPICKVAL(Apttus_Proposal__Opportunity__r.Ultimate_Consignee__r.Account_Status__c ,&apos;Pending Validation&apos;)
),$Label.GenerateProposalUltimateConsigneeMessage,
IF(
OR(
ISPICKVAL(Apttus_Proposal__Opportunity__r.Lessor_Customer__r.Account_Status__c,&apos;Unverified&apos;),
ISPICKVAL(Apttus_Proposal__Opportunity__r.Lessor_Customer__r.Account_Status__c,&apos;Pending Validation&apos;)
),$Label.GenerateProposalLessorCustomerMessage,
IF(
ISBLANK(Apttus_Proposal__Primary_Contact__c),$Label.GenProposalPCMsg,
IF(
OR(
ISPICKVAL(Apttus_Proposal__Opportunity__r.Distributor__r.Account_Status__c,&apos;Unverified&apos;),
ISPICKVAL(Apttus_Proposal__Opportunity__r.Distributor__r.Account_Status__c ,&apos;Pending Validation&apos;)
),$Label.GenerateProposalDistributorMessage,
IF(NOT(ISBLANK(Apttus_Proposal__Opportunity__r.Ultimate_Consignee__r.Credit_Block__c)),$Label.QuoteUCCreditBlock,
IF(
AND(
NOT(ISBLANK(Apttus_Proposal__Opportunity__r.Distributor__r.Credit_Block__c)),
(Apttus_Proposal__Opportunity__r.Direct_Sale_to_Ultimate_Consignee__c &lt;&gt; true)
),$Label.QuoteDistCreditBlock,
IF(NOT(ISBLANK(Apttus_Proposal__Opportunity__r.Lessor_Customer__r.Credit_Block__c)),$Label.QuoteLCCreditBlock,
IF(NOT(ISBLANK(Apttus_Proposal__Opportunity__r.Account.Credit_Block__c)),$Label.QuoteSoldToCreditBlock,
IF(
OR(
TEXT(Apttus_Proposal__Approval_Stage__c)=&apos;Approved&apos;,
TEXT(Apttus_Proposal__Approval_Stage__c)=&apos;Generated&apos;,
TEXT(Apttus_Proposal__Approval_Stage__c)=&apos;Presented&apos;
),
IF(NOT(ISBLANK( Payer__r.Credit_Block__c )),Payer_Credit_Block__c,
HYPERLINK(&quot;/apex/ApttusGenerateQuote?id=&quot;&amp;Id, IMAGE(&quot;/resource/Button_Generate_Quote_Docuemnt&quot;, &quot;Generate&quot;, 20, 125), &quot;_self&quot;)
),
NULL
)))))))))))))))))))</formula>
    <inlineHelpText>Click to generate the quote document.</inlineHelpText>
    <label>Generate</label>
    <type>Text</type>
</CustomField>