force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Generate_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Generate_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCP-37888 Field created to check if generates completed or not for large cart.</description>
    <label>Generate In Progress</label>
    <type>Checkbox</type>
</CustomField>