force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Generate_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Generate_Start_Time__c</fullName>
    <description>DCP-37888 Field created to store date/time for process builder to trigger after &quot;X&quot; minutes and check for webservice response once clicked on generate.</description>
    <label>Generate Start Time</label>
    <type>DateTime</type>
</CustomField>