force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Inco_Term_1__c.field-meta.xml
<CustomField>
    <fullName>Inco_Term_1__c</fullName>
    <description>Picklist field to select inco term 1</description>
    <inlineHelpText>Define obligations, costs, and risks involved in the delivery of goods from Illumina to customer</inlineHelpText>
    <label>Inco Term 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Inco_Term_1</valueSetName>
    </valueSet>
</CustomField>