force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Inco_Term_Approval_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Inco_Term_Approval_Matrix__c</fullName>
    <description>DCP-40114:To store the Inco term record id from custom approval matrix to use in approval rule</description>
    <label>Inco Term Approval Matrix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>