force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Indirect_Transregion_Flag__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Transregion_Flag__c</fullName>
    <description>Flag to check Indirect transregion </description>
    <formula>If (
    AND ( 
        OR (
            Apttus_Proposal__Opportunity__r.RecordType.DeveloperName = $Label.IndirectFieldServices,
            Apttus_Proposal__Opportunity__r.RecordType.DeveloperName = $Label.IndirectReOrder,
            Apttus_Proposal__Opportunity__r.RecordType.DeveloperName = $Label.OpportunityRTIndirectStandard
        ), 
         Distributor__r.Territory_Region__c != null,
         Ultimate_Consignee__r.Territory_Region__c != null,
         Distributor__r.Territory_Region__c != Ultimate_Consignee__r.Territory_Region__c 
    ),
   true,
   false )</formula>
    <label>Indirect Transregion Flag</label>
    <type>Checkbox</type>
</CustomField>