force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Informatics_Product_Line_Item_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Informatics_Product_Line_Item_Numbers__c</fullName>
    <description>Informatics product line item number field</description>
    <label>Informatics Product Line Item Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>