force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Informatics_Quotation_c__c.field-meta.xml
<CustomField>
    <fullName>Informatics_Quotation_c__c</fullName>
    <description>Flag to check Informatics Opportunity on Opportunity</description>
    <formula>AND(Apttus_Proposal__Opportunity__r.Informatics_Opportunity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Informatics Quotation</label>
    <type>Checkbox</type>
</CustomField>