force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Invalid_Quote__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a flag used to mark if the related opportunity is recently converted to transborder.</description>
    <inlineHelpText>Quotation can not be generated or converted into an order.</inlineHelpText>
    <label>Invalid Quote</label>
    <type>Checkbox</type>
</CustomField>