force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Inventory_Location_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Location_ERP_Number__c</fullName>
    <businessOwnerUser>gis@illumina.com</businessOwnerUser>
    <description>Formula field to store ERP Customer ID of Inventory Location</description>
    <formula>Inventory_Location__r.ERP_Customer_ID__c</formula>
    <inlineHelpText>Formula field to store ERP Customer ID of Inventory Location</inlineHelpText>
    <label>Inventory Location ERP Number</label>
    <type>Text</type>
</CustomField>