force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Is_100_Percent_DD__c.field-meta.xml
<CustomField>
    <fullName>Is_100_Percent_DD__c</fullName>
    <description>A roll up summary field which count the number of line item which has total a discount of 100%</description>
    <label>Is 100 Percent DD</label>
    <summaryFilterItems>
        <field>Apttus_Proposal__Proposal_Line_Item__c.Total_Discount_Percentage__c</field>
        <operation>equals</operation>
        <value>100</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>