force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Is_Reprice_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Reprice_Completed__c</fullName>
    <defaultValue>false</defaultValue>
	<description>Checkbox to indicate whether pricing has been completed for line items when Quote is cloned. Also used to control Add Products button visibility</description>
    <label>Is Reprice Completed</label>
    <type>Checkbox</type>
</CustomField>