force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Is_Updated_By_System__c.field-meta.xml
<CustomField>
    <fullName>Is_Updated_By_System__c</fullName>
    <description>Flag to check is updated by system</description>
    <defaultValue>false</defaultValue>
    <label>Is Updated By System</label>
    <type>Checkbox</type>
</CustomField>