force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Last_Generate_Success__c.field-meta.xml
<CustomField>
    <fullName>Last_Generate_Success__c</fullName>
    <description>DCP-37888 Field created to capture the date time of last success generate.</description>
    <label>Last Generate Success</label>
    <type>DateTime</type>
</CustomField>