force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Last_Validation_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Validation_Id__c</fullName>
    <defaultValue>0</defaultValue>
    <description>DCP-37888 Field created to store validation id after each callout.</description>
    <label>Last Validation Id</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>