force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/MyIllumina_User_Email__c.field-meta.xml
<CustomField>
    <fullName>MyIllumina_User_Email__c</fullName>
    <description>Email field to store illumina user email</description>
    <inlineHelpText>Email address used to make quotation redeemable online</inlineHelpText>
    <label>MyIllumina User Email</label>
    <type>Email</type>
</CustomField>