force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/National_Group_Number__c.field-meta.xml
<CustomField>
        <fullName>National_Group_Number__c</fullName>
        <description>DCP-51343-Fetch NGN from Account</description>
        <inlineHelpText>As part of 7729, to capture national group number.</inlineHelpText>
        <formula>Ultimate_Consignee__r.National_Group_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Group Number</label>
        <type>Text</type>
</CustomField>