force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/No_Charge_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>No_Charge_Product_Category__c</fullName>
    <description>Picklist to select the NCSO type.</description>
    <inlineHelpText>Required for quotes with line items with 100% Sales Discounts. For help selecting a NCSO type refer to link mentioned in the field - 'Link to No Charge Product Frame Work'</inlineHelpText>
    <label>No Charge Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discounted Commercial Transaction</fullName>
            </value>
            <value>
                <fullName>Commercial Product Evaluation or Demo Instrument</fullName>
            </value>
            <value>
                <fullName>Customer Service or Dispute Resolution</fullName>
            </value>
            <value>
                <fullName>Other: Legal Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>