force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Num_qtLines_as_trade_In__c.field-meta.xml
<CustomField>
    <fullName>Num_qtLines_as_trade_In__c</fullName>
    <description>Count of quote lines that are flagged as trade-in</description>
    <label>Num qtLines as trade-In</label>
    <summaryFilterItems>
        <field>Apttus_Proposal__Proposal_Line_Item__c.Trade_In_Type__c</field>
        <operation>contains</operation>
        <value>Sales Internal, Marketing Internal</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>