force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Number_of_MFN_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_MFN_Line_Items__c</fullName>
    <description>Rollup to check if MFN Approval is required on Quotation Line Item or not</description>
    <label>Number of MFN Line Items</label>
    <summaryFilterItems>
        <field>Apttus_Proposal__Proposal_Line_Item__c.Apttus_QPApprov__Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approval Required</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Apttus_Proposal__Proposal_Line_Item__c.Is_MFN_Line_Item__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>