force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Number_Of_Sample_Check__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Sample_Check__c</fullName>
    <description>Formula field to check number of sample check</description>
    <formula>IF( Total_Number_Of_Samples__c  &lt;  Apttus_Proposal__Opportunity__r.Consortium__r.Minimum_Sample_Amount__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Sample Check</label>
    <type>Checkbox</type>
</CustomField>