force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/NumTrade_Ins__c.field-meta.xml
<CustomField>
    <fullName>NumTrade_Ins__c</fullName>
    <description>Number of trade-in Products that are linked with Quotation</description>
    <label>NumTrade-Ins</label>
    <summaryForeignKey>Trade_In_Product__c.Quote_Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>