force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Open_Offer_Discount_Violation_Type__c.field-meta.xml
<CustomField>
    <fullName>Open_Offer_Discount_Violation_Type__c</fullName>
    <description>Picklist field to indicate whether Applied Discount % &gt; Open Offer Max %, and also if Applied Discount % &gt; Open Offer Max % + 15</description>
    <inlineHelpText>choose if  Applied Discount % &gt; Open Offer Max % (or Open Offer Max%+15)</inlineHelpText>
    <label>Open Offer Discount Violation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discount Exceeded</fullName>
            </value>
            <value>
                <fullName>Discount Exceeded By 15 Percent</fullName>
            </value>
            <value>
                <fullName>No Open Offer Discount Due To Different Ngn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>