force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Open_Offer_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Open_Offer_Product_Type__c</fullName>
    <description>System generated field reflecting high level product class based on items added to Conga cart when product added is an open offer product.</description>
    <inlineHelpText>System generated field reflecting high level product class based on items added to Conga cart when product added is an open offer product.</inlineHelpText>
    <label>Open Offer Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>