force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <description>Formula field to populate opportunity Record type</description>
    <formula>Apttus_Proposal__Opportunity__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Record Type</label>
    <type>Text</type>
</CustomField>