force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <description>Lookup to customer master data</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account that will pay the invoice for this transaction.</inlineHelpText>
    <label>Payer</label>
    <referenceTo>Customer_Master_Data__c</referenceTo>
    <relationshipLabel>Quotations (Payer)</relationshipLabel>
    <relationshipName>Quotations2</relationshipName>
    <type>Lookup</type>
</CustomField>