force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Payer_Credit_Block__c.field-meta.xml
<CustomField>
    <fullName>Payer_Credit_Block__c</fullName>
    <description>Stores Payer&apos;s Credit block value.</description>
    <label>Payer Credit Block</label>
    <length>255</length>
    <type>Text</type>
</CustomField>