force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Payer_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Payer_ERP_Number__c</fullName>
    <description>Payer ERP Number</description>
    <formula>Payer__r.ERP_Customer_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payer ERP Number</label>
    <type>Text</type>
</CustomField>