force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Post_Pricing_Message__c.field-meta.xml
<CustomField>
    <fullName>Post_Pricing_Message__c</fullName>
    <description>Automated through Process Builder</description>
    <inlineHelpText>Non standard post pricing message text field; manual entry. Selectiion of Non Standard  Message, and insertion of text in the Non Standard Post Pricing Message box, will  automatically route quote to Contract Admins for approval.</inlineHelpText>
    <label>Post Pricing Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>