force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/PPM_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>PPM_Last_Modified_Date__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Last date the Post Pricing was modified</description>
    <inlineHelpText>Last date the Post Pricing was modified</inlineHelpText>
    <label>PPM Last Modified Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>