force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Prepared_by__c.field-meta.xml
<CustomField>
    <fullName>Prepared_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DCP-1058 -  Refers Prepared By User</description>
    <inlineHelpText>Name of individual creating Quote.</inlineHelpText>
    <label>Prepared by</label>
	<lookupFilter>
		<active>true</active>
		<filterItems>
			<field>User.Email</field>
			<operation>contains</operation>
			<value>@illumina.com</value>
		</filterItems>
		<filterItems>
			<field>User.ContactId</field>
			<operation>equals</operation>
			<value></value>
		</filterItems>
		<isOptional>false</isOptional>
	</lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>