force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Product_End_Of_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_End_Of_Service_Date__c</fullName>
    <description>Minimum of end of service date from all Quotation line item</description>
    <label>Product End Of Service Date</label>
    <summarizedField>Apttus_Proposal__Proposal_Line_Item__c.End_Of_Service_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Apttus_Proposal__Proposal_Line_Item__c.End_Of_Service_Date__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>