force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Product_Specific_Terms_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_Specific_Terms_Count__c</fullName>
    <description>Rollup summary to SUM of Product Specific Terms Line Item of all quotation line item</description>
    <label>Product Specific Terms Count</label>
    <summarizedField>Apttus_Proposal__Proposal_Line_Item__c.Product_Specific_Terms_Line_Item__c</summarizedField>
    <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>