force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Promo_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Promo_Name_2__c</fullName>
    <description>DCP-15146</description>
    <label>Promo Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>