force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Promo_T_C_1__c.field-meta.xml
<CustomField>
    <fullName>Promo_T_C_1__c</fullName>
    <description>DCP-15146</description>
    <label>Promo T&amp;C 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>