force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Promotion_JSON__c.field-meta.xml
<CustomField>
    <fullName>Promotion_JSON__c</fullName>
    <description>Field to store JSON for promotion</description>
    <label>Promotion JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>