force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Purchase_Contract_DRAGEN_Terms__c.field-meta.xml
<CustomField>
	<fullName>Purchase_Contract_DRAGEN_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should only be used by Customer Solutions to indicate DRAGEN terms when Material # 20040619 is on the quote AND Material # 20031995 is NOT on the quote.</description>
        <inlineHelpText>This field should only be used by Customer Care to indicate DRAGEN terms when Material for DRAGEN server is on the quote AND DRAGEN server installation is NOT on the quote.</inlineHelpText>
        <label>Purchase Contract DRAGEN Terms</label>
        <type>Checkbox</type>
</CustomField>