force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Quote_Has_Open_Offer_Product__c.field-meta.xml
<CustomField>
    <fullName>Quote_Has_Open_Offer_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag will be true when Quote has Open offer Product.</description>
    <inlineHelpText>This field will be indicator that the Quote has any Open Offer Product or not.</inlineHelpText>
    <label>Quote Has Open Offer Product?</label>
    <type>Checkbox</type>
</CustomField>