force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Quote_Output_Generated_Valid_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Output_Generated_Valid_From_Date__c</fullName>
    <description>Field to capture the date quote output generated/valid from date.</description>
    <inlineHelpText>Date Quote was Generated or Quote output is valid from</inlineHelpText>
    <label>Quote Output Generated / Valid From Date</label>
    <type>Date</type>
</CustomField>