force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Quote_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sub_Type__c</fullName>
    <description>Opportunity Type</description>
    <formula>TEXT(Apttus_Proposal__Opportunity__r.Type)</formula>
    <label>Quote Sub Type</label>
    <type>Text</type>
</CustomField>