force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <description>Opportunity Record Type name</description>
    <formula>Apttus_Proposal__Opportunity__r.RecordType.Name</formula>
    <label>Quote Type</label>
    <type>Text</type>
</CustomField>