force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Region_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Region_Distributor__c</fullName>
    <description>Distributor Territory Region</description>
    <formula>Distributor__r.Territory_Region__c</formula>
    <label>Region (Distributor)</label>
    <type>Text</type>
</CustomField>