force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Region_Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Region_Sold_To__c</fullName>
    <description>Account Territory Region</description>
    <formula>Apttus_Proposal__Account__r.Territory_Region__c</formula>
    <label>Region (Sold To)</label>
    <type>Text</type>
</CustomField>