force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Region_Ultimate_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Region_Ultimate_Consignee__c</fullName>
    <description>Formula field to show ultimate consignee account territory region</description>
    <formula>Ultimate_Consignee__r.Territory_Region__c</formula>
    <label>Region (Ultimate Consignee)</label>
    <type>Text</type>
</CustomField>