force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Sales_Discretionary_Approval_Error__c.field-meta.xml
<CustomField>
    <fullName>Sales_Discretionary_Approval_Error__c</fullName>
    <description>Error message if Approval Hierarchy is not found.</description>
    <label>Sales Discretionary Approval Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>