force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/SAP_Errors__c.field-meta.xml
<CustomField>
    <fullName>SAP_Errors__c</fullName>
    <description>Field to store SAP errors</description>
    <label>SAP Errors</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>