force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/SAP_Quote__c.field-meta.xml
<CustomField>
    <fullName>SAP_Quote__c</fullName>
    <description>DCP-1058 - Represents SAP Quote Number</description>
    <externalId>true</externalId>
    <inlineHelpText>SAP quote number that is associated with the APTTUS quote; used for order conversion.</inlineHelpText>
    <label>SAP Quote #</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>