force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Send_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Send_Proposal__c</fullName>
    <description>DCP-1060 - To Send Quote via Adobe Esign</description>
    <formula>IF (
AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Generated&quot;), ISPICKVAL(Apttus_QPApprov__Approval_Status__c, &quot;Approved&quot;)),HYPERLINK(&quot;/apex/echosign_dev1__AgreementTemplateProcess?masterid=&quot;&amp;Id, IMAGE(&quot;/resource/Button_Send_Via_Adobe_Esign&quot;, &quot;Send Via Adobe Esign&quot;, 22, 150),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Proposal</label>
    <type>Text</type>
</CustomField>