force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look Up To Customer Master Data</description>
    <inlineHelpText>Name of entity that Illumina will ship product/solution to. Drives freight, tax and sales organization (direct/indirect). Changes to Ship-To after quote is Approved will not be allowed.</inlineHelpText>
    <label>Ship To</label>
    <referenceTo>Customer_Master_Data__c</referenceTo>
    <relationshipLabel>Quotations (Ship To)</relationshipLabel>
    <relationshipName>Quotations1</relationshipName>
    <type>Lookup</type>
</CustomField>