force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Ship_To_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Contact_Name__c</fullName>
    <description>DCP-45303: Customer Service user fills this field which is visible on generated Sales contract.</description>
    <label>Ship To Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>