force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Ship_To_Country__c.field-meta.xml
<CustomField xmlns=http://soap.sforce.com/2006/04/metadata>
    <fullName>Ship_To_Country__c</fullName>
    <description>Ship To Country</description>
    <formula>Ship_To__r.Country__c</formula>
    <label>Ship To Country</label>
    <type>Text</type>
</CustomField>