force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Ship_To_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_ERP_Number__c</fullName>
    <description>Field to store ship to ERP number</description>
    <formula>Ship_To__r.ERP_Customer_Id__c</formula>
    <label> Ship To ERP Number</label>
    <type>Text</type>
</CustomField>