force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Sold_To_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Account_Name__c</fullName>
    <description>Sold to Account Name</description>
    <formula>Apttus_Proposal__Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold To Account Name</label>
    <type>Text</type>
</CustomField>