force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Sold_To_Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Account_Region__c</fullName>
    <description>Field to store Sold to Account Region</description>
    <label>Sold To Account Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>