force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Sold_To_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Distribution_Channel__c</fullName>
    <description>Text field to sold to distribution channel</description>
    <label>Sold To Distribution Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>