force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Sold_To_District__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_District__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>District assigned to Sold to Account.</description>
    <formula>Apttus_Proposal__Account__r.District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold To District</label>
    <type>Text</type>
</CustomField>