force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Sold_To_Division__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Division__c</fullName>
    <description>Sold to division for Quotation</description>
    <label>Sold To Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>