force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Sold_To_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_ERP_Number__c</fullName>
    <description>Sold to ERP number</description>
    <formula>Apttus_Proposal__Account__r.ERP_Customer_Id__c</formula>
    <label> Sold To ERP Number</label>
    <type>Text</type>
</CustomField>