force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Sold_To_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Record_Type__c</fullName>
    <description>Stores the record type of Sold to account.</description>
    <formula>Apttus_Proposal__Account__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold To Record Type</label>
    <type>Text</type>
</CustomField>